# QDownloader

./: meson.build
src/: QDownloader.cpp  QDownloader.h  QDownloaderPrivate.cpp  QDownloaderPrivate.h
tests/SimpleDownload/: simple_download.cpp
